--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,18 @@ android {
         unitTests.returnDefaultValues = true
     }
 
+    android.testOptions {
+        unitTests.all {
+            jacoco {
+                includeNoLocationClasses = true
+            }
+        }
+    }
+
     buildTypes {
+        debug {
+            testCoverageEnabled true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
