--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -10,9 +10,6 @@ on:
   pull_request:
     branches: [ master ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -30,3 +27,7 @@ jobs:
         run: ./gradlew testDebugUnitTest
       - name: Test Report
         run:   bash <(curl -s https://codecov.io/bash)
+      - name: generate report
+        with:
+          path: app/build/test-results
+        
