--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -25,9 +25,12 @@ jobs:
        # Execute unit tests
       - name: Unit Test
         run: ./gradlew testDebugUnitTest
-      - name: Test Report
+        
+      - name: Upload Test Report
         run:   bash <(curl -s https://codecov.io/bash)
+        
       - name: generate report
+        uses: actions/upload-artifact@v2
         with:
           path: app/build/test-results
         
