--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -29,7 +29,8 @@ jobs:
       - name: generate report
         uses: actions/upload-artifact@v2
         with:
-          path: app/build/reports/tests/testDebugUnitTest
+          path: app/build/reports/tests/testDebugUnitTest/index.html
+      
         
       - name: Upload Test Report
         run:   bash <(curl -s https://codecov.io/bash)
