--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -29,7 +29,7 @@ jobs:
       - name: generate report
         uses: actions/upload-artifact@v2
         with:
-          path: CodeCoverage_Example/app/build/reports/tests/testDebugUnitTest/index.html
+          path: CodeCoverage_Example/app/build/reports/tests/testDebugUnitTest
       
         
       - name: Upload Test Report
