--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -29,8 +29,12 @@ jobs:
       - name: generate report
         uses: actions/upload-artifact@v2
         with:
-          path: CodeCoverage_Example/app/build/reports/tests/testDebugUnitTest
+          path: app/build/reports/tests/testDebugUnitTest
       
+      - name: Download Test Reports Folder
+        uses: actions/download-artifact@v2
+        with:
+          name: generate report
         
       - name: Upload Test Report
         run:   bash <(curl -s https://codecov.io/bash)
