--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -29,7 +29,7 @@ jobs:
       - name: generate report
         uses: actions/upload-artifact@v2
         with:
-          path: app/build/reports/tests/testDebugUnitTest
+          path: app/build/test-results
       
    #   - name: Download Test Reports Folder
     #    uses: actions/download-artifact@v2
