--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -29,8 +29,8 @@ jobs:
       - name: generate report
         uses: actions/upload-artifact@v2
         with:
-          shell: bash <(curl -s https://codecov.io/bash)
-          path: app/build/test-results
+          path: app/build/reports/tests/testDebugUnitTest  
+         # path: app/build/test-results
             
       
    #   - name: Download Test Reports Folder
