--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,5 @@
 codecov:
   disable_default_path_fixes: true
-fixes: app/build/reports/tests/testDebugUnitTest
+fixes:
+# app/build/reports/tests/testDebugUnitTest
+- "/home/runner/work/CodeCoverage_Example>/<CodeCoverage_Example>/::"
