--- a/codecov.yml
+++ b/codecov.yml
@@ -2,4 +2,4 @@ codecov:
   disable_default_path_fixes: true
 fixes:
 # app/build/reports/tests/testDebugUnitTest
-- "/home/runner/work/CodeCoverage_Example>/<CodeCoverage_Example>/::"
+- "/home/runner/work/CodeCoverage_Example>/::"
