delete unused files

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,31 @@ plugins {
     id 'jacoco'
 }
 
+
+jacoco {
+    toolVersion = "$jacocoVersion"
+}
+
+tasks.withType(Test) {
+    jacoco.includeNoLocationClasses = true
+}
+
+task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
+
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
+
+
+
+}
+
+
+
+
+
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -26,13 +51,7 @@ android {
         unitTests.returnDefaultValues = true
     }
 
-    android.testOptions {
-        unitTests.all {
-            jacoco {
-                includeNoLocationClasses = true
-            }
-        }
-    }
+
 
     buildTypes {
         debug {
