--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -39,7 +39,7 @@ jobs:
        #   name: generate report
         
       - name: Upload Test Report
-        run:   bash <(curl -s https://codecov.io/bash)
+        run:   bash <(curl -s https://codecov.io/bash) -f "app/build/reports/tests/testDebugUnitTest"
         
      
         
