--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -24,7 +24,7 @@ jobs:
 
        # Execute unit tests
       - name: Unit Test
-        run: ./gradlew connectedCheck
+        run: ./gradlew jacocoTestReport
         #./gradlew testDebugUnitTest
         
       - name: generate report
