--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -37,8 +37,10 @@ jobs:
       
       - name: Download Test Reports Folder
         uses: actions/download-artifact@v2
+        
         with:
           name: report
+          path: app/build/test-results   
         
       - name: Upload Test Report
         run:   bash <(curl -s https://codecov.io/bash) 
