--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,6 @@
 codecov:
   disable_default_path_fixes: true
-#fixes:
-# app/build/reports/tests/testDebugUnitTest
+fixes:
+ - app/build/reports/tests/testDebugUnitTest
 #- "/app/build/reports/tests/testDebugUnitTest>/::"
 # - "/home/runner/work/CodeCoverage_Example/app/build/reports/tests>/::"
