--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,5 @@
 codecov:
   disable_default_path_fixes: true
 fixes:
- - app/build/reports/tests/testDebugUnitTest
-#- "/app/build/reports/tests/testDebugUnitTest>/::"
+  - "/app/build/reports/tests>/::"
 # - "/home/runner/work/CodeCoverage_Example/app/build/reports/tests>/::"
