--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: report 
-          path: app/build/test-results 
+          path: app/build//reports/tests/testDebugUnitTest/index.html
          # path: app/build/test-results
             
       
@@ -38,11 +38,11 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: report
-          path: app/build/test-results   
+          path: app/build//reports/tests/testDebugUnitTest/  
         
       - name: Upload Test Report
-        run:  bash <(curl -s https://codecov.io/bash) -v
-        #-f "app/build/reports/tests/"
+        run:  bash <(curl -s https://codecov.io/bash) -f "app/build/reports/tests/testDebugUnitTest/index.html"
+        
               
         
         
