--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -15,7 +15,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -30,7 +30,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: report 
-          path: app/build//reports/tests/testDebugUnitTest/index.html
+          path: app/build//reports/tests/testDebugUnitTest
          # path: app/build/test-results
             
       
@@ -38,10 +38,10 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: report
-          path: app/build//reports/tests/testDebugUnitTest/  
+          path: app/build//reports/tests/testDebugUnitTest
         
       - name: Upload Test Report
-        run:  bash <(curl -s https://codecov.io/bash) -f "app/build/reports/tests/testDebugUnitTest/index.html"
+        run:  bash <(curl -s https://codecov.io/bash) -f "app/build/reports/tests/testDebugUnitTest"
         
               
         
