--- a/codecov.yml
+++ b/codecov.yml
@@ -1,5 +1,8 @@
-codecov:
-  disable_default_path_fixes: true
-fixes:
- # - "/app/build/reports/tests>/::"
-  - "/home/runner/work/CodeCoverage_Example/CodeCoverage_Example>/::"
+{
+    "fixes": [
+        "/home/runner/work/CodeCoverage_Example/CodeCoverage_Example>/::"
+    ],
+    "codecov": {
+        "disable_default_path_fixes": true
+    }
+}
