--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: report 
-          path: app/build//reports/tests/testDebugUnitTest
+          path: app/build/reports/coverage/debug
          # path: app/build/test-results
             
       
@@ -38,10 +38,11 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: report
-          path: app/build//reports/tests/testDebugUnitTest
+          path: app/build/reports/coverage/debug
         
       - name: Upload Test Report
-        run:  bash <(curl -s https://codecov.io/bash) -f "app/build/reports/coverage/debug/index.html"
+        run:  bash <(curl -s https://codecov.io/bash) 
+        #-f "app/build/reports/coverage/debug/index.html"
         
               
         
