--- a/.github/workflows/codecoverage.yml
+++ b/.github/workflows/codecoverage.yml
@@ -44,10 +44,10 @@ jobs:
         with:
           name: report
           path: app/build/reports/coverage/debug
-          script: bash <(curl -s https://codecov.io/bash)
         
-     # - name: Upload Test Report
-      #  run:  bash <(curl -s https://codecov.io/bash) -f "app/build/reports/coverage/debug"
+      - name: Upload Test Report
+        run:  bash <(curl -s https://codecov.io/bash) 
+        #-f "app/build/reports/coverage/debug"
         
         
               
