add global class

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ android {
         unitTests.returnDefaultValues = true
     }
 
+    lintOptions {
+        abortOnError false
+    }
 
     buildTypes {
         debug {
